...
                                            MainAxisAlignment.center,
                                        children: [
                                          Container(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key:
                                                  ValueKey('Signup-Email_6bjz'),
                                              controller: _model
                                                  .signupEmailTextController,
                                              focusNode:
                                                  _model.signupEmailFocusNode,
                                              onChanged: (_) =>
                                                  EasyDebounce.debounce(
...
                                            ),
                                          ),
                                          Container(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key: ValueKey(
                                                  'Signup-Password_rkzm'),
                                              controller: _model
                                                  .signupPasswordTextController,
                                              focusNode: _model
                                                  .signupPasswordFocusNode,
                                              autofocus: false,
                                              textInputAction:
...
                                            ),
                                          ),
                                          Container(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key: ValueKey(
                                                  'Signup-ConfirmPassword_lv43'),
                                              controller: _model
                                                  .signupConfirmPasswordTextController,
                                              focusNode: _model
                                                  .signupConfirmPasswordFocusNode,
                                              autofocus: false,
                                              textInputAction:
...
                                ),
                                borderRadius: BorderRadius.circular(24.0),
                              ),
                            ),
                          if (_model.tabBarCurrentIndex == 0)
                            FFButtonWidget(
                              key: ValueKey('Signup-Button_apc4'),
                              onPressed: () async {
                                if (_model.formKey2.currentState == null ||
                                    !_model.formKey2.currentState!.validate()) {
                                  return;
                                }
                                GoRouter.of(context).prepareAuthEvent();
...
