...
                              width: 120.0,
                              height: 80.0,
                              fit: BoxFit.contain,
                            ),
                          ),
                          Text(
                            key: ValueKey('Text_xnlg'),
                            'AscendHome',
                            textAlign: TextAlign.center,
                            style: FlutterFlowTheme.of(context)
                                .displayMedium
                                .override(
                                  font: GoogleFonts.interTight(
...
